--- a/client/src/movie-mania-index.html
+++ b/client/src/movie-mania-index.html
@@ -26,35 +26,35 @@
         <ul>
             <li>
                 <h3>Star Wars</h3>
-                <img src="./static/images/mbr-215x146.jpg" alt="star wars image">
+                <img src="/images/mbr-215x146.jpg" alt="star wars image">
                 <h5>Steven Speelberg <span>2005</span></h5>
                 <p>Fantasy</p>
                 <button>Details</button>
             </li>
             <li>
                 <h3>Star Wars</h3>
-                <img src="./static/images/mbr-215x146.jpg" alt="star wars image">
+                <img src="/images/mbr-215x146.jpg" alt="star wars image">
                 <h5>Steven Speelberg <span>2005</span></h5>
                 <p>Fantasy</p>
                 <button>Details</button>
             </li>
             <li>
                 <h3>Star Wars</h3>
-                <img src="./static/images/mbr-215x146.jpg" alt="star wars image">
+                <img src="/images/mbr-215x146.jpg" alt="star wars image">
                 <h5>Steven Speelberg <span>2005</span></h5>
                 <p>Fantasy</p>
                 <button>Details</button>
             </li>
             <li>
                 <h3>Star Wars</h3>
-                <img src="./static/images/mbr-215x146.jpg" alt="star wars image">
+                <img src="/images/mbr-215x146.jpg" alt="star wars image">
                 <h5>Steven Speelberg <span>2005</span></h5>
                 <p>Fantasy</p>
                 <button>Details</button>
             </li>
             <li>
                 <h3>Star Wars</h3>
-                <img src="./static/images/mbr-215x146.jpg" alt="star wars image">
+                <img src="/images/mbr-215x146.jpg" alt="star wars image">
                 <h5>Steven Speelberg <span>2005</span></h5>
                 <p>Fantasy</p>
                 <button>Details</button>
